another bug squashed

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -838,7 +838,7 @@ article {
 @media (max-width: 760px) {
   .scroller {
     right: 15%;
-    bottom: 15%;
+    bottom: 25%;
     width: 80px;
     height: 80px;
   }
